Sun Jan 27 19:54:38 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: (rev 0.14) Fix input.frequency for protocol 0004.

Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * clients/Makefile.am:
   - set libupsclient version to 1.0.0
   - use the shared version of libupsclient for LDADD
 - docs/protocol.txt: mention libupsclient

Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - lib/Makefile.am: only install libupsclient-config if pkg-config support is
   disabled.
 - man/libupsclient-config.1: created (Debian Lintian QA report)

Sat Jan 26 16:40:01 UTC 2008 / Charles Lepple <clepple@gmail.com>

 * driver/powercom.[ch], man/powercom.8: Powercom update v0.11 from Alexey Sidorov:
   - move variables from .h to .c file (thanks Michael Tokarev for bugreport)
   - fix string comparison (thanks Michael Tokarev for bugreport & Charles Lepple for patch)
   - added BNT-other, for BNT 100-120V models (I havn't specs for it)

Sat Jan 26 04:27:58 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: Starting to add support for protocol 0004. Bumped
   driver revision to 0.13.

Tue Jan 22 04:00:34 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - packaging/debian/rules: The skel driver isn't built if we only build a subset of the
   drivers. Remove it in any case.

Tue Jan 22 03:34:34 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - driver/powercom.[ch], data/driver.list, man/powercom.8: Powercom update from
   Alexey Sidorov.

Tue Jan 22 03:22:11 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - data/driver.list, AUTHORS: update with Oneac information from Jacob Schmier

Mon Jan 21 11:59:42 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libmge-xml:
   - Fix memory leak (dynamically allocated memory would not be free'd
     after an error condition, change to automatic buffers).
   - C90 doesn't allow mixing code and data.
