@@ -782,6 +782,10 @@ static void drop_connection(utype_t *ups)
 {
 	debug("Dropping connection to UPS [%s]\n", ups->sys);
 
+	/* Attempt to logout from this UPS. If this doesn't work,
+	don't bother (it may not be listening to us anymore) */
+	upscli_sendline(&ups->conn, "LOGOUT\n", 7);
+
 	ups->commstate = 0;
 	ups->linestate = 0;
 	clearflag(&ups->status, ST_LOGIN);
@@ -1316,7 +1320,7 @@ static void upsmon_cleanup(void)
 	while (utmp) {
 		unext = utmp->next;
 
-		upscli_disconnect(&utmp->conn);
+		drop_connection(utmp);
 		ups_free(utmp);
 
 		utmp = unext;
